assets/css/new-style.css
/* ... */
  .main-footer .footer-left {
    float: left; }
  .main-footer .footer-right {
    padding-left: 20px;
    padding-right: 20px;
    float: right; }

.simple-footer {
  text-align: center;
  margin-top: 40px;
  margin-bottom: 40px; }

body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active a {
  background-color: #029455;
  color: #fff; }
body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a {
  color: #e8ebfd; }
  body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li a:hover {
    background-color: #029455;
    color: #fff; }
body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-menu li.active a {
  color: #fff; }

body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu > li.active > a {
  padding-left: 16px;
  background-color: transparent;
  position: relative; }
  body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu > li.active > a:before {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    height: 25px;
    width: 4px;
    background-color: #029455; }
body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-menu li a {
  padding-left: 50px; /* 34px? */
  background-color: #fff; }

body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu > li > a {
  padding-left: 16px;
  background-color: transparent;
  position: relative; }

@media (max-width: 1024px) {
  .sidebar-gone-hide {
    display: none !important; }

  .sidebar-gone-show {
    display: block !important; }

  .main-sidebar {
    position: fixed !important;
    margin-top: 0 !important;
    z-index: 891; }

  body.layout-2 .main-wrapper,
  body.layout-3 .main-wrapper {
    width: 100%;
    padding: 0;
    display: block; }

  .main-content {
    padding-left: 0px;
    padding-right: 0px;
    width: 100% !important; }

  .main-content .section .page {
    margin-left: 20px;
    margin-right: 20px;
  }

  .main-footer {
    padding-left: 30px; }

  body.search-show {
    overflow: hidden; }
    body.search-show .navbar {
      z-index: 892; }
  body.sidebar-show {
    overflow: hidden; }
  body.search-show:before, body.sidebar-show:before {
    content: '';
    position: fixed;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    opacity: 0;
    z-index: 891;
    -webkit-animation-name: fadeinbackdrop;
    animation-name: fadeinbackdrop;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards; }
  @-webkit-keyframes fadeinbackdrop {
    to {
      opacity: .6; } }
  @keyframes fadeinbackdrop {
    to {
      opacity: .6; } } }
/* 4.5 Animation */
.pulsate {
  animation: pulsate 1s ease-out;
  animation-iteration-count: infinite;
  opacity: 1; }

@-webkit-keyframes pulsate {
  0% {
    -webkit-transform: scale(0.1, 0.1);
    opacity: 0.0; }
  50% {
    opacity: 1.0; }
  100% {
    -webkit-transform: scale(1.2, 1.2);
    opacity: 0.0; } }

/*# sourceMappingURL=style.css.map */

/* AFZ custom */
.navbar-expand-lg {
  justify-content: space-between;
}

.material-icons {
  font-size: 18px;
}

body.layout-2 .sidebar-wrapper {
  display: flex;
  flex-wrap: wrap;
  padding: 0  }

body.layout-2 .sidebar-wrapper .main-sidebar .sidebar-menu li.menu-header {
  padding: 0 15px;
}

.dropdown-item.active, .dropdown-item:active {
  color: #fff;
  text-decoration: none;
  background-color: #fff;
}

.main-content-inner {
  padding: 16px;
}

